styles/main.css
/* ... */
*,
*:before,
*:after {
  font-variation-settings: 
    "MONO" var(--recursive-MONO), "CASL" var(--recursive-CASL),
    "slnt" var(--recursive-slnt), "CRSV" var(--recursive-CRSV), 
    "wght" var(--recursive-wght);
}

:focus { outline: 1px solid var(--orange-1); }
:focus-visible { outline: 1px solid var(--orange-1); }
  
:where(:any-link, :-webkit-any-link) {
  color: var(--black-3);
  text-decoration: none;
  padding: 0 var(--xs);
  transition: opacity .2s;
}

::selection {
  background: var(--selection-color); 
  color: var(--white-1);
}

html {   
  scroll-behavior: smooth;
  scroll-snap-type: y mandatory;
  overflow-y: scroll;  
}

body {
  display: flex;
  flex-direction: column;
  background: var(--bkgnd);
  background: var(--bkgnd) conic-gradient(from var(--gradient-angle) at -0% 72%, var(--bkgnd), var(--black-4),var(--bkgnd));
  color: var(--text-color);
  font-family: var(--font-stack);
  font-optical-sizing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-text-size-adjust: auto;
  -moz-text-size-adjust: auto;
  min-block-size: 100vh;
  padding: 0 4cqi;
  font-size: clamp(1rem,calc(1rem + .125cqi), 2rem);
  animation: rotate-gradient linear, axis-x linear;
  animation-timeline: scroll();
  animation-range: 0 100vh;

  @media (prefers-reduced-motion: no-preference) {
    interpolate-size: allow-keywords;
  }
}

ul {
  list-style: none;
  padding-left: 0;
}

header {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
  width: 100%;
  min-block-size: 5rem;
  scroll-snap-align: center;
}

nav ul {
  display: flex;
  align-items: center;  
  transition: opacity .2s, font-weight .26s;
    a:hover {
      font-weight: 850;
      opacity: .5; 
    }
}

h1 {
  --recursive-wght: 700;
  --recursive-CASL: .64;
  font-family: "Recursive", sans-serif, system-ui;
  font-size: clamp(var(--f-base),calc(var(--f-base) + .4cqi), 1.5rem);
  line-height: 1.1;
  text-transform: uppercase;
  transition: font-variation-settings .48s;
  filter: drop-shadow(.5px .5px 1px var(--text-shadow));
    &:hover {
      --recursive-wght: 900;
      --recursive-CASL: 0.1;
    }
}

[role='img'] { 
  width:1.25rem;
  height:1.25rem;
  margin-block-end: 0.3rem;
}

nav li > a {
  filter: drop-shadow(.5px .5px 1px var(--text-shadow));
}

main { margin: auto; }
.icon-set { display: none; } 

.cover {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-block-size: 100vh;
  padding: 1rem;
}

:where(.cover, footer) { scroll-snap-align: start; }

:where(.about-item) { 
  font-size: max(var(--f-base), calc(1rem + 1cqi));
  animation-name: enter;
  animation-timeline: view();
}

/* header - drop shadow */
:where(h1, .nav-item, .copyright ) {
  filter: drop-shadow(
    .5px .5px 1px var(--text-shadow),
    .75px .75px 3px var(--text-shadow),
    1.25px 1.25px 6px var(--text-shadow)
  );
}

.brand {
  font-weight: 550;
  color: var(--gray-2);
  transition: opacity .2s, font-weight .26s;
    &:hover {
      opacity: .5;
      font-weight: 850; 
    }
}

.link-contact {
  font-weight: 550; 
  padding: 0; 
  cursor: pointer;
  box-shadow: 
    inset 0 -1px 0 0 #4a98bf,
    inset 0 -2px 0 0 rgba(74,152,191,.76),
    inset 0 -6px 0 0 rgba(74,152,191,.52),
    inset 0 -10px 0 0 rgba(74,152,191,.28);
  transition: box-shadow var(--link-ease) var(--link-timing);
}

.link-contact:hover {
  box-shadow:
    inset 0 -2px 0 0 rgba(74,152,191,.96),
    inset 0 -4px 0 0 rgba(74,152,191,.72),
    inset 0 -8px 0 0 rgba(74,152,191,.48),
    inset 0 -12px 0 0 rgba(74,152,191,.24);
}

.footer-menu { 
  --recursive-wght: 200;
  display: flex; 
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  margin-block-start: auto;
  font-size: clamp(1.1cqi,calc(var(--s) + 1.1cqi), var(--m));
    .copyright { align-self: center; }
}

.footer-menu ul { 
  display: flex;  
  flex-wrap: wrap;
  gap: 1.25vmin;
}

.footer-menu--item a {
  display: flex;
  align-items: end;
  margin-inline-end: var(--xxs); 
  gap: 1ch;
  filter: drop-shadow(.5px .5px 1px var(--text-shadow));
  transition: fill 330ms;
    @supports (color:color(display-p3 1 1 1)) and (prefers-color-scheme:dark) { 
      .footer-menu--item a { --text-shadow: color(display-p3 0.873 0.883 0.889); }
    }
}

.footer-menu--item a.twitter:where(:hover,:focus,:active) { 
  fill: var(--blue-4);
  filter: drop-shadow(1px 1px 1px var(--black-5));
}

.footer-menu--item a.email:where(:hover,:focus,:active) {
  fill:#fb805b;
  filter: drop-shadow(1px 1px 1px var(--orange-4));
}

.footer-menu--item a.linkedIn:where(:hover,:focus,:active) { 
  fill: var(--blue-1);
  filter: drop-shadow(1px 1px 1px var(--black-5));
}

.footer-menu--item a.github:where(:hover,:focus,:active) {
  fill: var(--black-4);
  filter: drop-shadow(1px 1px 1px var(--black-5));
}

.icon-text { margin-block-end: 0.1rem; }
#about { max-width: max(48ch, 64ch); }
#icon-twitter {margin-block-end: .3rem;} 


/*resume */
.resume-container {
	inline-size: clamp(32vmin, 36rem, 64vmin);
}

:where(#technical-skills-heading, #work-experience-heading, #education-heading, #certifications-heading, [aria-label="technical-skills"], date) {
  visibility: hidden;
}
:where(.bio, .skills-container) {
  display: none;
}

:where([aria-label="technical-skills"], [aria-label="work-experience"], [aria-label="education"], [aria-label="certifications"]) {
  margin-block-end: 2.5rem;
}

:where(summary h3, date, .copyright) {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap; 
}
/* ... */

